# nativeapi-flutter

./: .gitattributes  .gitmodules  CHANGELOG.md  README-ZH.md  README.md  ffigen.yaml  pubspec.yaml  update_includes.py
.github/workflows/: ci.yml  publish.yml
bindgen/: README.md  config.yaml
bindgen/spec/: dart_api_profile.yaml  symbol_map.yaml
bindgen/template/file/: dart.j2
bindgen/template/partials/: alias.j2  class.j2  constant.j2  enum.j2  function.j2  type.j2
example/: README.md
example/lib/: main.dart
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
examples/cocoapods_example/: .metadata  README.md  pubspec.yaml
examples/cocoapods_example/lib/: main.dart
examples/cocoapods_example/test/: widget_test.dart
examples/display_example/: README.md  pubspec.yaml
examples/display_example/lib/: main.dart
examples/display_example/linux/: CMakeLists.txt
examples/display_example/ohos/: oh-package.json5
examples/display_example/test/: widget_test.dart
examples/launch_at_login_example/: .metadata  README.md  pubspec.yaml
examples/menu_example/: README.md  pubspec.yaml
examples/menu_example/lib/: main.dart  (+1 more)
examples/multiple_window_example/: .metadata  README.md  pubspec.yaml
examples/storage_example/: .metadata  README.md  pubspec.yaml
examples/tray_icon_example/: README.md  pubspec.yaml
examples/url_opener_example/: README.md  pubspec.yaml
examples/window_example/: README.md  pubspec.yaml
lib/: nativeapi.dart  nativeapi_bindings_generated.dart
lib/src/: accessibility_manager.dart  broadcast_center.dart  broadcast_receiver.dart  display.dart  display_listener.dart  display_manager.dart  event_listener_mixin.dart  keyboard_listener.dart  keyboard_monitor.dart  modifier_key.dart  nativeapi.dart  nativeapi_bindings.dart  nativeapi_bindings_generated.dart  screen_retriever.dart  tray.dart  tray_manager.dart  window.dart  window_listener.dart  window_manager.dart
linux/: CMakeLists.txt
macos/: nativeapi.podspec
macos/Classes/: nativeapi.mm
src/: CMakeLists.txt  accessibility_manager.cpp  accessibility_manager.h  broadcast_center.cpp  broadcast_center.h  display.h  display_manager.cpp  display_manager.h  keyboard_monitor.cpp  keyboard_monitor.h  nativeapi.cpp  nativeapi.h  point.h  rectangle.h  screen_retriever.cpp  screen_retriever.h  size.h  tray.cpp  tray.h  tray_manager.cpp  tray_manager.h  window.cpp  window.h  window_manager.cpp  window_manager.h
windows/: CMakeLists.txt
(+104 files in other folders)
